updating package.json

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/kdboudreau/learning-node/issues"
   },
-  "homepage": "https://github.com/kdboudreau/learning-node#readme"
+  "homepage": "https://github.com/kdboudreau/learning-node#readme",
+  "dependencies": {
+    "moment": "^2.27.0"
+  }
 }
