--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/kdboudreau/learning-node#readme",
   "dependencies": {
     "moment": "^2.27.0"
+  },
+  "devDependencies": {
+    "jasmine-node": "^3.0.0"
   }
 }
