--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/kdboudreau/learning-node#readme",
   "dependencies": {
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
     "moment": "^2.27.0"
   },
