--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "express-generator": "^4.16.1",
     "moment": "^2.27.0"
   },
   "devDependencies": {
