--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-generator": "^4.16.1",
-    "moment": "^2.27.0"
+    "moment": "^2.27.0",
+    "mongoose": "^5.9.24",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "jasmine-node": "^3.0.0"
