--- a/package.json
+++ b/package.json
@@ -18,9 +18,6 @@
   "homepage": "https://github.com/kdboudreau/learning-node#readme",
   "dependencies": {
     "ejs": "^3.1.3",
-    "express": "^4.17.1",
-  },
-  "devDependencies": {
-    "jasmine-node": "^3.0.0"
+    "express": "^4.17.1"
   }
 }
